fix bug all
