# api/docs/swagger.json
@@ -60,7 +60,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/structs.CompanyStruct"
+                            "$ref": "#/definitions/structs.CreateCompany"
                         }
                     }
                 ],
@@ -233,6 +233,15 @@
                     "package"
                 ],
                 "summary": "GetListPackages",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "SetId",
+                        "name": "id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -276,7 +285,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/structs.PackageStruct"
+                            "$ref": "#/definitions/structs.CreatePackage"
                         }
                     }
                 ],
@@ -449,6 +458,15 @@
                     "service"
                 ],
                 "summary": "ListServices",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "CompanyId",
+                        "name": "id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -492,7 +510,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/structs.ServiceStruct"
+                            "$ref": "#/definitions/structs.CreateService"
                         }
                     }
                 ],
@@ -665,6 +683,15 @@
                     "set"
                 ],
                 "summary": "GetListSets",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "ServiceId",
+                        "name": "id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -708,7 +735,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/structs.SetStruct"
+                            "$ref": "#/definitions/structs.CreateSet"
                         }
                     }
                 ],
@@ -891,6 +918,71 @@
                 },
                 "updatedAt": {
                     "type": "string"
+                }
+            }
+        },
+        "structs.CreateCompany": {
+            "type": "object",
+            "properties": {
+                "cover": {
+                    "type": "string"
+                },
+                "name": {
+                    "$ref": "#/definitions/structs.Language"
+                },
+                "slogan": {
+                    "$ref": "#/definitions/structs.Language"
+                }
+            }
+        },
+        "structs.CreatePackage": {
+            "type": "object",
+            "properties": {
+                "capacity": {
+                    "type": "integer"
+                },
+                "code": {
+                    "type": "string"
+                },
+                "cost": {
+                    "type": "integer"
+                },
+                "description": {
+                    "$ref": "#/definitions/structs.Language"
+                },
+                "name": {
+                    "$ref": "#/definitions/structs.Language"
+                },
+                "setId": {
+                    "type": "integer"
+                }
+            }
+        },
+        "structs.CreateService": {
+            "type": "object",
+            "properties": {
+                "companyId": {
+                    "type": "integer"
+                },
+                "description": {
+                    "$ref": "#/definitions/structs.Language"
+                },
+                "name": {
+                    "$ref": "#/definitions/structs.Language"
+                }
+            }
+        },
+        "structs.CreateSet": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "$ref": "#/definitions/structs.Language"
+                },
+                "name": {
+                    "$ref": "#/definitions/structs.Language"
+                },
+                "serviceId": {
+                    "type": "integer"
                 }
             }
         },
