# pkg/structs/set.go
@@ -8,3 +8,9 @@ type SetStruct struct {
 	CreatedAt   string   `json:"createdAt"`
 	UpdatedAt   string   `json:"updatedAt"`
 }
+
+type CreateSet struct {
+	Name        Language `json:"name"`
+	Description Language `json:"description"`
+	ServiceId   int      `json:"serviceId"`
+}
